--- a/carsharing/app/templates/includes/nav.html
+++ b/carsharing/app/templates/includes/nav.html
@@ -93,6 +93,22 @@
                 
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link" href="">
+              <i class="fa fa-hdd-o" style="color: #FFF; font-size:20px"></i>
+                <span class="nav-link-text" style="font-size:15px">Borrow Requests</span>
+            </a>
+                
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/api/users/on_lend">
+              <i class="fa fa-hdd-o" style="color: #FFF; font-size:20px"></i>
+                <span class="nav-link-text" style="font-size:15px">On Lend Cars</span>
+            </a>
+                
+            </li>
+
+
 
 
             <!-- Divider -->
