--- a/carsharing/app/templates/base.html
+++ b/carsharing/app/templates/base.html
@@ -15,12 +15,12 @@
         <link rel="stylesheet" href="/static/css/open-iconic-bootstrap.min.css">
         <link rel="stylesheet" href="/static/css/animate.css">
         
-        <link rel="stylesheet" href="/static/css/owl.carousel.min.css">
+       <!--  <link rel="stylesheet" href="/static/css/owl.carousel.min.css">
         <link rel="stylesheet" href="/static/css/owl.theme.default.min.css">
         <link rel="stylesheet" href="/static/css/magnific-popup.css">
     
         <link rel="stylesheet" href="/static/css/aos.css">
-    
+     -->
         <link rel="stylesheet" href="/static/css/ionicons.min.css">
     
         <link rel="stylesheet" href="/static/css/bootstrap-datepicker.css">
