--- a/carsharing/app/templates/cars/profile.html
+++ b/carsharing/app/templates/cars/profile.html
@@ -14,27 +14,28 @@
     
          <form method="POST" action="" >
 		  <div class="form-group">
+           
 		  <div class="form-row">
-		  <div class="col-lg-6">
-            <label for="exampleInputPassword1">User Id</label>
-			<input class="form-control" id="exampleInputPassword1" type="" name="Id" value="" >
+		 <!--  <div class="col-lg-6">
+           
+			<input class="form-control" id="exampleInputPassword1" type="hidden" name="Id" value="" >
             
-          </div>
+          </div> -->
 		  <div class="col-lg-6">
             <label for="exampleInputPassword1">Username</label>
-            <input class="form-control" id="exampleInputPassword1" type="text" name="username" value="" >
+            <input class="form-control" id="exampleInputPassword1" type="text" name="username" value="{{data.username}}" >
           </div>
 		  <div class="col-lg-6">
             <label for="exampleInputPassword1">Phone</label>
-            <input class="form-control" id="exampleInputPassword1" type="text" name="Phone" value="" >
+            <input class="form-control" id="exampleInputPassword1" type="text" name="Phone" value="{{data.phone}}" >
           </div>
 		  <div class="col-lg-6">
             <label for="exampleInputPassword1">Email</label>
-            <input class="form-control" id="exampleInputPassword1" type="text" name="Email" value="" >
+            <input class="form-control" id="exampleInputPassword1" type="text" name="Email" value="{{data.email}}" >
           </div>
 		  <div class="col-lg-6">
             <label for="exampleInputPassword1">About</label>
-            <input class="form-control" id="exampleInputPassword1" type="text" name="about" value="" >
+            <input class="form-control" id="exampleInputPassword1" type="text" name="about" value="{{data.about}}" >
           </div>
            <div class="col-lg-6">
             <label for="exampleInputPassword1">Password</label>
@@ -42,9 +43,9 @@
           </div>
             <div class="col-lg-6">
             <label for="exampleInputPassword1">Rating</label>
-            <input class="form-control" id="exampleInputPassword1" type="text" name="rating" value="" >
+            <input class="form-control" id="exampleInputPassword1" type="text" name="rating" value="{{data.rating}}" >
           </div>
-		  
+		 
 		  </div>
 		  </div>
 		  
