--- a/carsharing/app/templates/index.html
+++ b/carsharing/app/templates/index.html
@@ -1,8 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-{%extends "base.html"%}
-{%block content%}    
-    <div class="hero-wrap ftco-degree-bg" style="background-image: url(/static/images/bg_1.jpg);" data-stellar-background-ratio="0.5">
+  <head>
+    <title>Carshare</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="static/css/open-iconic-bootstrap.min.css">
+    <link rel="stylesheet" href="static/css/animate.css">
+    
+    <link rel="stylesheet" href="static/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="static/css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="static/css/magnific-popup.css">
+
+    <link rel="stylesheet" href="static/css/aos.css">
+
+    <link rel="stylesheet" href="static/css/ionicons.min.css">
+
+    <link rel="stylesheet" href="static/css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="static/css/jquery.timepicker.css">
+
+    
+    <link rel="stylesheet" href="static/css/flaticon.css">
+    <link rel="stylesheet" href="static/css/icomoon.css">
+    <link rel="stylesheet" href="static/css/style.css">
+  </head>
+  <body>
+    
+	    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+      <div class="container">
+        <a class="navbar-brand" href="/">Car<span>Share</span></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="oi oi-menu"></span> Menu
+        </button>
+
+        <div class="collapse navbar-collapse" id="ftco-nav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
+           
+            
+            <li class="nav-item active"><a href="/allcars" class="nav-link">Cars</a></li>
+            <li class="nav-item"><a href="/accounts/login" class="nav-link">Login</a></li>
+            <li class="nav-item"><a href="/accounts/register" class="nav-link">Register</a></li>
+          
+          </ul>
+        </div>
+      </div>
+    </nav>
+    
+       <div class="hero-wrap ftco-degree-bg" style="background-image: url(/static/images/bg_1.jpg);" data-stellar-background-ratio="0.5">
       <div class="overlay"></div>
       <div class="container">
         <div class="row no-gutters slider-text justify-content-start align-items-center justify-content-center">
@@ -55,7 +102,7 @@
 					            </div>      
 					          </div>
 					        </div>
-					        <p><a href="#" class="btn btn-primary py-3 px-4">Find Your Perfect Car</a></p>
+					        <p><a href="/accounts/register" class="btn btn-primary py-3 px-4">Find Your Perfect Car</a></p>
 	  						</div>
 	  					</div>
 	  				</div>
@@ -72,11 +119,12 @@
             <h2 class="mb-2">Our Vehicles</h2>
           </div>
         </div>
+    	
     		<div class="row">
     			 {% for cars in data %}
     			<div class="col-md-4">
     				<div class="car-wrap rounded ftco-animate">
-    					<div class="img rounded d-flex align-items-end" style="background-image: url(/static/images/car-1.jpg);">
+    					<div class="img rounded d-flex align-items-end" style="background-image: url(/static/{{cars.photo}});">
     					</div>
     					<div class="text">
     						<h2 class="mb-0"><a href="car-single.html">{{cars.brand}}</a></h2>
@@ -84,7 +132,7 @@
 	    						<span class="cat">Pricing</span>
 	    						<p class="price ml-auto">KES {{cars.charges}} <span>/day</span></p>
     						</div>
-    						<p class="d-flex mb-0 d-block"><a href="/api/cars/{{cars.id}}/bid" class="btn btn-primary py-2 mr-1">Hire now</a> <a href="car-single.html" class="btn btn-secondary py-2 ml-1">Details</a></p>
+    						<p class="d-flex mb-0 d-block"><a href="/api/cars/{{cars.id}}/bid" class="btn btn-primary py-2 mr-1">Hire now</a> <a href="/view-car/{{cars.id}}" class="btn btn-secondary py-2 ml-1">Details</a></p>
     					</div>
     				</div>
     			</div>
@@ -114,22 +162,105 @@
 
 		
 
-		<section class="ftco-section ftco-intro" style="background-image: url(/static/images/bg_3.jpg);">
+<section class="ftco-section ftco-intro" style="background-image: url(/static/images/bg_3.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
 				<div class="row justify-content-end">
 					<div class="col-md-6 heading-section heading-section-white ftco-animate">
             <h2 class="mb-3">Do You Want To Earn With Us? So Don't Be Late.</h2>
-            <a href="#" class="btn btn-primary btn-lg">Become our patner</a>
+            <a href="/accounts/register" class="btn btn-primary btn-lg">Become our patner</a>
           </div>
 				</div>
 			</div>
 		</section>
 
 
-{%endblock%}
+    
+    <footer class="ftco-footer ftco-bg-dark ftco-section">
+      <div class="container">
+        <div class="row mb-5">
+          <div class="col-md">
+            <div class="ftco-footer-widget mb-4">
+              <h2 class="ftco-heading-2"><a href="#" class="logo">Car<span>Share</span></a></h2>
+              <p>First trip with our cars. It'll blow your mind.</p>
+              <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
+                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="ftco-footer-widget mb-4 ml-md-5">
+              <h2 class="ftco-heading-2">Information</h2>
+              <ul class="list-unstyled">
+                <li><a href="#" class="py-2 d-block">About</a></li>
+                <li><a href="#" class="py-2 d-block">Services</a></li>
+                <li><a href="#" class="py-2 d-block">Term and Conditions</a></li>
+                <li><a href="#" class="py-2 d-block">Best Price Guarantee</a></li>
+                <li><a href="#" class="py-2 d-block">Privacy &amp; Cookies Policy</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md">
+             <div class="ftco-footer-widget mb-4">
+              <h2 class="ftco-heading-2">Customer Support</h2>
+              <ul class="list-unstyled">
+                <li><a href="#" class="py-2 d-block">FAQ</a></li>
+                <li><a href="#" class="py-2 d-block">Payment Option</a></li>
+                
+                <li><a href="#" class="py-2 d-block">How it works</a></li>
+                <li><a href="#" class="py-2 d-block">Contact Us</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="ftco-footer-widget mb-4">
+            	<h2 class="ftco-heading-2">Have a Questions?</h2>
+            	<div class="block-23 mb-3">
+	              <ul>
+	                
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+254747474994</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@carshare.com</span></a></li>
+	              </ul>
+	            </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12 text-center">
+
+            <p>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | 
+  </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    
+  
+
+  <!-- loader -->
+<!--   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
+ -->
+
+  <script src="static/js/jquery.min.js"></script>
+  <script src="static/js/jquery-migrate-3.0.1.min.js"></script>
+  <script src="static/js/popper.min.js"></script>
+  <script src="static/js/bootstrap.min.js"></script>
+  <script src="static/js/jquery.easing.1.3.js"></script>
+  <script src="static/js/jquery.waypoints.min.js"></script>
+  <script src="static/js/jquery.stellar.min.js"></script>
+  <script src="static/js/owl.carousel.min.js"></script>
+  <script src="static/js/jquery.magnific-popup.min.js"></script>
+  <script src="static/js/aos.js"></script>
+  <script src="static/js/jquery.animateNumber.min.js"></script>
+  <script src="static/js/bootstrap-datepicker.js"></script>
+  <script src="static/js/jquery.timepicker.min.js"></script>
+  <script src="static/js/scrollax.min.js"></script>
+  
+  <script src="js/google-map.js"></script>
+  <script src="static/js/main.js"></script>
+    
+  </body>
 </html>
-<script>
-
-
-</script>
