--- a/carsharing/app/templates/includes/footer.html
+++ b/carsharing/app/templates/includes/footer.html
@@ -3,4 +3,5 @@
 <script src="/static/css/dashboard/js/sb-admin-2.min.js"></script>
 <script src="/static/css/dashboard/js/sb-admin-2.min.js"></script>
   <script src="/static/js/bootstrap.bundle.min.js"></script>
+   <script src="/static/js/chart.js"></script>
   <script type="text/javascript" src="/static/css/dashboard/js/jquery.min.js"></script>
