--- a/carsharing/app/templates/cars/borrow.html
+++ b/carsharing/app/templates/cars/borrow.html
@@ -17,24 +17,18 @@
 
 		  <div class="form-group">
 		  <div class="form-row">
-		  <div class="col-lg-6">
-        
-            <label for="exampleInputPassword1">Car Id</label>
-		
-            <input class="form-control" id="exampleInputPassword1" type="text" name="carid" value="{{data.id}}" >
-              
-          </div>
+		  
 		  <div class="col-lg-6">
             <label for="exampleInputPassword1">From</label>
-            <input class="form-control" id="exampleInputPassword1" type="date" name="from" value="" >
+            <input class="form-control" id="from" type="date" name="from" value="" >
           </div>
 		  <div class="col-lg-6">
             <label for="exampleInputPassword1">Until</label>
-            <input class="form-control" id="exampleInputPassword1" type="date" name="until" value="" >
+            <input class="form-control" id="until" type="date" name="until" value="" onchange="checkDuration()" >
           </div>
 		  <div class="col-lg-6">
             <label for="exampleInputPassword1">Duration</label>
-            <input class="form-control" id="exampleInputPassword1" type="text" name="duration" value="" >
+            <input class="form-control" id="duration" type="text" name="duration" value="" readonly onchange="checkDuration()">
           </div>
 		  <div class="col-lg-6">
             <label for="exampleInputPassword1">Borrowed Location</label>
@@ -43,6 +37,12 @@
            <div class="col-lg-6">
             <label for="exampleInputPassword1">Expected Location</label>
             <input class="form-control" id="exampleInputPassword1" type="text" name="drop_off" value="" >
+          </div>
+          <div class="col-lg-6">
+        
+    
+            <input class="form-control" id="exampleInputPassword1" type="hidden" name="carid" value="{{data.id}}" >
+              
           </div>
 		  
 		  </div>
@@ -62,6 +62,37 @@
     <script type="text/javascript">
       function goBack() {
   window.history.back();
+}
+function checkDuration()
+{
+
+
+
+     // JavaScript program to illustrate 
+    // calculation of no. of days between two date 
+  var from = document.getElementById('from').value;
+  var until = document.getElementById('until').value;
+  
+  
+    // To set two dates to two variables
+    var date1 = new Date(from);
+var date2 = new Date(until);
+  
+// To calculate the time difference of two dates
+var Difference_In_Time = date2.getTime() - date1.getTime();
+  
+// To calculate the no. of days between two dates
+var Difference_In_Days = Difference_In_Time / (1000 * 3600 * 24);
+
+
+
+     document.getElementById('duration').value = Difference_In_Days;
+
+//To display the final no. of days (result)
+// alert("Total number of days between dates  <br>"
+//                + date1 + "<br> and <br>" 
+//                + date2 + " is: <br> " 
+//                + Difference_In_Days);
 
 }
 </script>
