--- a/carsharing/app/templates/cars/borrowed.html
+++ b/carsharing/app/templates/cars/borrowed.html
@@ -10,8 +10,8 @@
                     <a onclick="goBack()" class="btn btn-info float-right"  style="color:#fff; margin-right: 10px"> <i class="fa fa-caret-left" aria-hidden="true"></i> Back</a>
                     
 
-                    <a data-toggle="modal" data-target="#addModal" class="btn btn-primary float-right"  style="color: #ffffff; margin-right: 10px"><i class="fa fa-plus-square" aria-hidden="true"></i> Add
-                    Car</a>
+                   <!--  <a data-toggle="modal" data-target="#addModal" class="btn btn-primary float-right"  style="color: #ffffff; margin-right: 10px"><i class="fa fa-plus-square" aria-hidden="true"></i> Add
+                    Car</a> -->
     </div>
         <div class="card-body">
           <div class="table-responsive">
@@ -25,6 +25,7 @@
                   <th>Duration</th>
                   <th>Dorrowed location</th>
                   <th>Expected location</th>
+                 <!--   <th>Status</th> -->
                 
           <th>Action</th>
                 </tr>
@@ -38,6 +39,7 @@
                   <th>Duration</th>
                   <th>Dorrowed location</th>
                   <th>Expected location</th>
+                  <!--  <th>Status</th> -->
                 
           <th>Action</th>
                 </tr>
@@ -54,6 +56,7 @@
                    <td>{{borrowed.duration}} </td>
                   <td>{{borrowed.borrowed_loc}} </td>
                   <td>{{borrowed.expected_loc}} </td>
+                <!--   <td>{{borrowed.status}} </td> -->
                   
                  
                    <td>
@@ -74,28 +77,6 @@
       </div>
     </div>
 <script type="text/javascript">
-
-$.ajax({
-    url: 'http://localhost:5000/api/cars?offset=&count=',
-    dataType: 'json',
-    success: function(data) {
-        for (var i=0; i<data.length; i++) {
-
-            var row = $('<tr><td>' + data[i].brand+ '</td><td>' 
-              + data[i].charges + '</td><td>' 
-              + data[i].description + '</td></tr>'
-              );
-            
-            $('#dataTable').append(row);
-
-
-        }
-        console.log(data);
-    },
-    error: function(jqXHR, textStatus, errorThrown){
-        alert('Error: ' + textStatus + ' - ' + errorThrown);
-    }
-});
 
 
 
